added content to readme

--- a/main.css
+++ b/main.css
@@ -4,7 +4,7 @@
 }
 
 .header{
-    background-image: url('./assets/header.png');
+    background-image: url('./header.png');
     background-size: cover;
     background-position: center;
     height: 60vh;
